IE11: Fix The metaboxes area position (overlapping the content)

--- a/edit-post/components/layout/style.scss
+++ b/edit-post/components/layout/style.scss
@@ -86,7 +86,14 @@
 	-webkit-overflow-scrolling: touch;
 
 	.edit-post-visual-editor {
-		flex-basis: 100%;
+		flex-grow: 1;
+
+		// In IE11 flex-basis: 100% cause a bug where the metaboxes area overlap with the content area.
+		// Resetting the `auto` makes it behave properly.
+		flex-basis: auto;
+		@supports (position: sticky) {
+			flex-basis: 100%;
+		}
 	}
 
 	.edit-post-layout__metaboxes {
